@@ -1,5 +1,15 @@
 2001-06-24  Dave Peticolas  <dave@krondo.com>
 
+	* src/engine/sql/kvp-sql.c: same as below
+
+	* src/engine/sql/txn.c: same as below
+
+	* src/engine/sql/price.c: same as below
+
+	* src/engine/sql/checkpoint.c: use strtoll instead of atoll
+
+2001-06-24  Dave Peticolas  <dave@krondo.com>
+
 	* AUTHORS: credits
 
 	* doc/sgml/C/xacc-about.sgml: credits
